BUGFIX: Fix the visibility of the fullScreen close btn

--- a/Resources/Private/JavaScript/Host/Containers/FullScreen/style.css
+++ b/Resources/Private/JavaScript/Host/Containers/FullScreen/style.css
@@ -2,6 +2,7 @@
     position: fixed;
     top: var(--spacing);
     right: calc(2 * var(--spacing));
+    z-index: 1;
     background-color: var(--brandColorsPrimaryBlue);
     box-shadow: 0 0 8px rgba(#000, .25);
 }
